crates/assemble/src/ops/snapshots/assemble__ops__test__ops_generated_projections.snap
---
source: crates/assemble/src/ops/mod.rs
assertion_line: 190
expression: "&tables.projections"
---
[
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/acmeCo/logs,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/acmeCo/logs,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/acmeCo/stats,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/acmeCo/stats,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/gooble/logs,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/gooble/logs,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/gooble/stats,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/gooble/stats,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/justme/logs,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/justme/logs,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/justme/stats,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/justme/stats,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/shamazon/logs,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/shamazon/logs,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/shamazon/stats,
        field: kind,
        location: /shard/kind,
        partition: 1,
        user_provided: 1,
    },
    Projection {
        scope: builtin://flow/ops/generated/collections,
        collection: ops/shamazon/stats,
        field: name,
        location: /shard/name,
        partition: 1,
        user_provided: 1,
    },
]
